<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_info"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/rvDoors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doors_amount"/>
            <TextView
                android:id="@+id/tvDoorsAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_number"/>
            <TextView
                android:id="@+id/tvRoundN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changed_choices"/>
            <TextView
                android:id="@+id/tvChangedChoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/door_chosen"/>
            <TextView
                android:id="@+id/tvDoorChosen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/won_games"/>
            <TextView
                android:id="@+id/tvWinRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 (0.00%)"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_games"/>
            <TextView
                android:id="@+id/tvLoseRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 (0.00%)"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_door_has_a_prize"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llInfo"
        app:layout_constraintBottom_toTopOf="@id/rvDoors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvDoors"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llInfo" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        app:layout_constraintTop_toBottomOf="@id/rvDoors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNewRound"/>

    <Button
        android:id="@+id/btnNewRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_round"
        app:layout_constraintTop_toBottomOf="@id/rvDoors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNewGame"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>